name:                snaplet-socketio
version:             0.9.0
synopsis:            Socket.io compatible Snaplet
homepage:            http://github.com/ocharles/snaplet-socketio
license:             BSD3
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ollie@ocharles.org.uk
category:            Web
build-type:          Simple
extra-source-files:  Changelog.md
cabal-version:       >=1.10

library
  default-language: Haskell2010
  exposed-modules:     Snap.Snaplet.SocketIO
  other-extensions:
    DeriveDataTypeable
    DeriveFunctor
    OverloadedStrings
    TypeOperators
  build-depends:
    aeson >= 0.6 && <0.7,
    async >= 2.0 && <2.1,
    attoparsec >= 0.10 && <0.11,
    base >=4.6 && <4.7,
    blaze-builder >= 0.3 && <0.4,
    bytestring >= 0.10 && <0.11,
    extensible-effects >= 1.2 && < 1.3,
    mtl >= 2.1 && <2.2,
    snap >=0.13 && <0.14,
    stm >= 2.4 && <2.5,
    text >= 0.11 && <0.12,
    transformers >= 0.3 && <0.4,
    unordered-containers >= 0.2 && <0.3,
    websockets >= 0.8 && < 0.9,
    websockets-snap >= 0.8 && < 0.9
  hs-source-dirs:      src
  default-language:    Haskell2010

--executable snaplet-socketio-test
--  main-is: Example.hs
--  build-depends:
--    aeson >= 0.6 && <0.7,
--    base >= 4.6 && < 5,
--    extensible-effects >= 1.2 && < 1.3,
--    lens >= 3.10 && < 3.11,
--    snap >=0.13 && <0.14,
--    snap-server >= 0.9 && < 0.10,
--    snap-core >= 0.9 && < 0.10,
--    snaplet-socketio
